--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -22,5 +22,6 @@ $dark-seafoam: #03a679;
 $clay: #DB704E;
 $tan: #FDE2C7;
 $midnight-blue: #14112c;
+$midnight: #10162c;
 $lavender: #817bdf;
 $teal: #4fd2c2;
