--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,7 +4,7 @@
 <div class="sign-up">
     <img src="/assets/homescreen-logo.png" class="top-title">
 
-    <%= render 'users/form_mobile'%>
+    <%= render 'users/form'%>
 
     <div class='footer-links'>
       <a href="/assets/luckee_privacy_policy.pdf"  target="_blank"  class='privacy-link'>Privacy Policy</a>
