--- a/app/views/static_pages/home_mobile.html.erb
+++ b/app/views/static_pages/home_mobile.html.erb
@@ -1,21 +1,20 @@
 <% content_for :body_class, "mobile-home" %>
 
 <div class="sign-up">
+    <div class="logo-wrapper">
+        <img src="/assets/white_luckee.png" class="top-title">
+    </div>
     <div class="welcome-box-m">Play free games. Earn real cash.</div>
 	  <%# render 'users/form_mobile'%>
 </div>
 <div class='mobile-home-footer'>
-	<div class='footer-links'>
-		<a href="/assets/luckee_privacy_policy.pdf"  target="_blank"  class='privacy-link'>Privacy Policy</a>
-		<a href="/assets/luckee_TOS.pdf"  target="_blank"  class='terms-link'>Terms of Service</a>
-	</div>
-</div>
+</div><!-- /.mobile-home-footer -->
 <div class='home-bottom'>
 	<div class='mountain-image'>
-    	<%= embedded_svg('svgs/mountains.svg', :class => 'mountains') %>
+    	<%= embedded_svg('svgs/taller_mountains.svg', :class => 'mountains') %>
 	</div>
 	<div class='trees'>
-		<%= embedded_svg('svgs/trees_and_low_hills.svg', :class => 'tree-hills') %>
+		<%= embedded_svg('svgs/trees_hills.svg', :class => 'tree-hills') %>
 	</div>
 	<div class='bottom-content'>
     </div>
