--- a/app/assets/stylesheets/buttons.css.scss
+++ b/app/assets/stylesheets/buttons.css.scss
@@ -42,4 +42,23 @@ html body {
             right: 15px;
         }
     }
+
+    .btn--homepage {
+        width: 40vw;
+        background-color: $teal;
+        color: $white;
+        padding: 10px 0 12px;
+        display: inline-block;
+        border-radius: 4px;
+        border: 2px solid $teal;
+        font-weight: 500;
+        font-size: 16px;
+
+        & + .btn--homepage {
+            margin-left: 15px;
+        }
+        &:hover {
+            text-decoration: none;
+        }
+    }
 }
