moved button styling to designated stylesheet

--- a/app/assets/stylesheets/buttons.css.scss
+++ b/app/assets/stylesheets/buttons.css.scss
@@ -61,4 +61,8 @@ html body {
             text-decoration: none;
         }
     }
+
+    .btn--no-fill {
+        background-color: transparent;
+    }
 }
