--- a/app/views/static_pages/onboarding.html.erb
+++ b/app/views/static_pages/onboarding.html.erb
@@ -11,7 +11,7 @@
                 </div>
                 <div class="secondary-copy">
                         <h2 class="secondary__cap">Play Free Games</h2>
-                        <p class="secondary__desc">Play all your favorite games here, in one place. You earn our currency in the form of credits by playing any of our games on any device.</p>
+                        <p class="secondary__desc">You earn credits by playing any of our games on any device</p>
                         <button class="nav-btn js-next-slide">Next</button>
                 </div><!-- /.secondary-copy -->
             </div>
@@ -37,7 +37,7 @@
                 </div>
                 <div class="secondary-copy">
                         <h2 class="secondary__cap">Redeem Credits</h2>
-                        <p class="secondary__desc">Redeem your credits for rewards such as cash, or even better, you can donate the value of your credits to charity!</p>
+                        <p class="secondary__desc">Redeem your credits for cash, rewards, or donate the value of your credits to charity!</p>
                         <%= link_to root_path do %><button class="nav-btn js-complete-slide">Get Started</button><% end %>
                 </div><!-- /.secondary-copy -->
             </div>
