changes to onboarding copy/style

--- a/app/views/static_pages/onboarding.html.erb
+++ b/app/views/static_pages/onboarding.html.erb
@@ -24,7 +24,7 @@
                 </div>
                 <div class="secondary-copy">
                         <h2 class="secondary__cap">Earn Credits</h2>
-                        <p class="secondary__desc">Accumulate credits by playing games. Once you have earned enough credits you can redeem them for rewards.</p>
+                        <p class="secondary__desc">Once you have earned enough credits you can redeem them for rewards</p>
                         <button class="nav-btn js-next-slide">Next</button>
                 </div><!-- /.secondary-copy -->
             </div>
