changed styling and copy of onboarding

--- a/app/views/static_pages/onboarding.html.erb
+++ b/app/views/static_pages/onboarding.html.erb
@@ -7,7 +7,7 @@
             <img src="/assets/onboarding-backdrop.jpg" alt="">
             <div class="container">
                 <h1 class="slides__title">Play free games. Earn real cash.</h1>
-                <div class="slides__tut-img" style="background-image: url(/assets/onboarding_1.png);">
+                <div class="slides__tut-img slides__tut-img--bg" style="background-image: url(/assets/onboarding_1.png);">
                 </div>
                 <div class="secondary-copy">
                         <h2 class="secondary__cap">Play Free Games</h2>
@@ -37,7 +37,7 @@
                 </div>
                 <div class="secondary-copy">
                         <h2 class="secondary__cap">Redeem Credits</h2>
-                        <p class="secondary__desc">Redeem your credits for cash, rewards, or donate the value of your credits to charity!</p>
+                        <p class="secondary__desc">Redeem your credits for cash or donate the value of your credits to charity!</p>
                         <%= link_to root_path do %><button class="nav-btn js-complete-slide">Get Started</button><% end %>
                 </div><!-- /.secondary-copy -->
             </div>
