--- a/app/assets/stylesheets/superslides.css.scss
+++ b/app/assets/stylesheets/superslides.css.scss
@@ -225,6 +225,9 @@ $orange-2048: #ffb400;
             background-size: 60%;
         }
     }
+    .slides__tut-img--bg {
+        background-size: 90%;
+    }
 }
 
 @media only screen and (max-width: 668px) {
