--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -89,7 +89,7 @@
       }(document, 'script'));
     </script>
 
-  <% if Rails.env.production? %>
+  <% if false %>
     <!-- GA Tracking Events -->
     <%# render 'layouts/tracking_events' %>
 
