--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -282,7 +282,7 @@
 
         <% end %>
 
-         <% if Rails.env.production? %>
+         <% if false %>
             <!-- GA Tracking Events -->
             <%# render 'layouts/tracking_events' %>
 
