--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -198,7 +198,7 @@ p {
   display: inline-block;
   width: 100%;
   height: 80px;
-  background-color: $purple;
+  background-color: $lavender;
   overflow: visible;
   position: relative;
   z-index: 10;
@@ -211,7 +211,7 @@ p {
     display: inline-block;
     text-align: right;
     height: 60px;
-    width: 350px;
+    width: 40vw;
     position: absolute !important;
     right: 0;
     margin-right: 5%;
@@ -223,6 +223,23 @@ p {
   .nav-logo {
     height: 35px;
     width: auto;
+  }
+  .nav-dropdown {
+    & > a {
+      color: $white;
+      margin-left: 25px;
+
+      &:hover {
+        color: $white;
+        text-decoration: none;
+      }
+
+      .notification {
+          top: -15px;
+          right: -10px;
+          border-radius: 100%;
+      }
+    }
   }
 }
 /*deposit*/
@@ -648,10 +665,17 @@ body {
   position: absolute;
   top: -2px;
   right: -5px;
-  padding: 2px 6px;
+  padding: 2.5px 6.5px;
   background: $red;
   color: $white;
-  border-radius: 4px;
+  border-radius: 100%;
+  display: none !important;
+  height: 18px;
+  width: 18px;
+
+  &.show {
+    display: block !important;
+  }
 }
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
