--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -62,6 +62,9 @@ body {
         }
     }
     &.register-page {
+        .mobile-container {
+            height: 100vh;
+        }
         padding: 0 7.5% 20px;
         .logo-wrapper {
             padding-top:0;
@@ -318,6 +321,7 @@ textarea {
     color: $white;
     float: left;
     text-align: center;
+    position: relative;
 
     .bottom-nav__img {
         height: 20px;
@@ -335,6 +339,29 @@ textarea {
     &.active {
         background-color: $black;
     }
+
+    .notification {
+        top: 2px;
+        right: 15px;
+        z-index: 10;
+    }
+}
+
+.notification {
+  position: absolute;
+  top: -2px;
+  right: -5px;
+  padding: 2.5px 6.5px;
+  background: $red;
+  color: $white;
+  border-radius: 100%;
+  display: none !important;
+  // height: 18px;
+  // width: 18px;
+
+  &.show {
+    display: block !important;
+  }
 }
 
 .bottom-nav__item--primary {
