--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,16 +54,17 @@
           <%# link_to 'Games', games_path %>
           <div class="nav-dropdown">
             <p class="nav-dropdown__user-credits" data-toggle="tooltip" data-placement="bottom" title="Credits Earned"><%= current_user.credits ||= 0 %></p>
-            <p class="nav-dropdown__name"><i class="fa fa-caret-down"></i> <%= current_user.name %></p>
+            <a href="/surveys" class="js-survery-link"><span style="position:relative;">Surveys <i class="fa fa-exclamation js-survey-notification notification"></i></span></a>
+            <%= link_to redeem_path do %> Redeem <% end %>
+            <%= link_to leaderboards_path do %> Leaders <% end %>
+            <p class="js-nav-dropdown__name nav-dropdown__name"><i class="fa fa-caret-down"></i> <%= current_user.name %></p>
 
               <span class="nav-dropdown__avatar" style="<% if current_user.oath_image %>background-image: url(<%= current_user.oath_image %>); <% else %> background-image: url(/assets/avatar-icon.png); <% end %> ">
-              <!-- <i class="fa fa-exclamation notification"></i> -->
+              <i class="fa fa-exclamation js-notification notification"></i>
             </span>
             <ul class="nav-dropdown__list">
               <li class="nav-dropdown__item"><%= link_to 'Games', games_path %></li>
-              <li class="nav-dropdown__item"><%= link_to redeem_path do %>Redeem Credits <span class="nav-dropdown__credits"><%= current_user.credits %></span><% end %></li>
               <li class="nav-dropdown__item"><%= link_to refer_path do %>Invite Friends <span class="nav-dropdown__credits">+25</span> <% end %></li>
-              <li class="nav-dropdown__item"><%= link_to surveys_path do %>Take Survey <span class="nav-dropdown__credits">+100</span><% end %></li>
               <li class="nav-dropdown__item"><a href="mailto:support@getluckee.com" target="_top">Contact Us</a></li>
               <li class="nav-dropdown__item nav-dropdown__signout"><%= link_to "Sign out", signout_path, method: "delete" %></li>
             </ul>
