--- a/app/views/surveys/show_mobile.html.erb
+++ b/app/views/surveys/show_mobile.html.erb
@@ -1,47 +1,6 @@
-	<p id="notice"><%= notice %></p>
-
-	<p class="intro-copy">Answer these questions and receive <%= @survey.credits %> credits!</p>
-
-	<div class="refer-friend">
-	 	<p class="redeemCredits__title">Complete Survey:</p>
-
-	 	<div class="survey__question">
-			<p class="survey__question-copy">1. How frequently do you work out? </p>
-			<%= radio_button 'workout', 'frequency', '0 times per week', :required => true %> 0 times per week <br />
-			<%= radio_button 'workout', 'frequency', '1-3 times per week' %> 1-3 times per week <br />
-			<%= radio_button 'workout', 'frequency', '4+ times per week' %> 4+times per week
-		</div>
-
-		<div class="survey__question">
-			<p class="survey__question-copy">2. Where do you prefer to work out?</p>
-			<%= radio_button 'workout', 'location', 'home/personal gym' %> In a home/personal gym <br />
-			<%= radio_button 'workout', 'location', 'local gym' %> In a local gym <br />
-			<%= radio_button 'workout', 'location', 'outside' %> Outside <br />
-		</div>
-
-		<div class="survey__question">
-			<p class="survey__question-copy">3. Have you ever tried CrossFit or Iron Tribe?</p>
-			<%= radio_button 'cross-iron', 'yesno', 'yes' %> Yes <br />
-			<%= radio_button 'cross-iron', 'yesno', 'no' %> No <br />
-		</div>
-
-		<div class="survey__question">
-			<p class="survey__question-copy">4. What is your experience with health / workout supplements?</p>
-			<%= radio_button 'supplements', 'taken', 'never' %> Never taken any <br />
-			<%= radio_button 'supplements', 'taken', 'past' %> I have taken them in the past but do not now <br />
-			<%= radio_button 'supplements', 'taken', 'current' %>	 I currently take a vitamin/supplemen <br />
-		</div>
-
-		<div class="survey__question">
-			<p class="survey__question-copy">5. Have you ever heard of ClassPass?</p>
-			<%= radio_button 'classpass', 'yesno', 'yes' %> Yes <br />
-			<%= radio_button 'classpass', 'yesno', 'no' %>	 No <br />
-		</div>
-
-		<%= form_for(@user_survey) do |f| %>
-			<%= f.hidden_field :id %>
-			<%= f.hidden_field :complete, :value => true %>
-			<%= f.submit 'Submit Survey', class: "btn-submit btn--top-margin"%>
-		<% end %>
-	</div> <!--/.refer-friend -->
-
+ <% case @survey.slug %>
+  <% when "fitness-survey" %>
+  	<%= render 'survey_one' %>
+  <% when "coffee-survey" %>
+    <%= render 'survey_two' %>
+<% end %>
