--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -28,3 +28,11 @@ $teal: #4fd2c2;
 $input-fill: #f6f7f9;
 $fb-blue: #448ccb;
 $blue-steel: #a5b0bd;
+
+// Fonts
+$xs: 12px;
+$sm: 14px;
+$md: 16px;
+$lg: 18px;
+$xl: 22px;
+$xxl: 24px;
