--- a/app/views/surveys/_survey_one.html.erb
+++ b/app/views/surveys/_survey_one.html.erb
@@ -1,3 +1,7 @@
+<div class="page-container">
+
+<!-- <h1 class="survey__title">Survey</h1> -->
+<section class="survey-wrapper">
 	<p id="notice"><%= notice %></p>
 
 	<p class="intro-copy">Answer these questions and receive <%= @survey.credits %> credits!</p>
@@ -44,4 +48,5 @@
 			<%= f.submit 'Submit Survey', class: "btn-submit btn--top-margin"%>
 		<% end %>
 	</div> <!--/.refer-friend -->
-
+</section><!-- /.section-wrapper -->
+</div>
