--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,6 +7,7 @@
 @import "leaderboard";
 @import "intermediates";
 @import "reset";
+@import "surveys";
 
 @mixin box_sizing {
   -moz-box-sizing: border-box;
@@ -41,6 +42,11 @@ textarea {
   }
 }
 
+.page-container {
+  margin: 0 auto;
+  max-width: 83.75em;
+  width: 100%;
+}
 /* typography */
 
 // h1, h2, h3, h4, h5, h6 {
