--- a/app/assets/stylesheets/surveys.css.scss
+++ b/app/assets/stylesheets/surveys.css.scss
@@ -1,3 +1,117 @@
-// Place all the styles related to the Surveys controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@import "variables";
+@import "mixins";
+
+.survey-wrapper {
+    padding: 30px 0;
+    text-align: left;
+
+    .intro-copy {
+        font-size: $xxl;
+        margin-bottom: 20px;
+    }
+    .survey__question {
+        font-size: $md;
+    }
+    .btn-submit {
+        color: $white;
+        border-radius: 4px;
+        margin-top: 20px;
+        padding: 10px 20px;
+        @include bgColorAndHover($lavender);
+
+        @include transition();
+    }
+    .control {
+        font-size: 18px;
+        position: relative;
+        display: block;
+        margin-bottom: 15px;
+        padding-left: 20px;
+        cursor: pointer;
+    }
+
+    .control input {
+        position: absolute;
+        z-index: -1;
+        opacity: 0;
+    }
+
+    .control__indicator {
+        position: absolute;
+        top: 3px;
+        left: 0;
+        width: 15px;
+        height: 15px;
+        background: #e6e6e6;
+    }
+
+    .control--radio .control__indicator {
+        border-radius: 50%;
+    }
+    /* Hover and focus states */
+    .control:hover input ~ .control__indicator,
+    .control input:focus ~ .control__indicator {
+        background: #ccc;
+    }
+
+    /* Checked state */
+    .control input:checked ~ .control__indicator {
+        background: $lavender;
+    }
+
+    /* Hover state whilst checked */
+    .control:hover input:not([disabled]):checked ~ .control__indicator,
+    .control input:checked:focus ~ .control__indicator {
+        background: $lavender;
+    }
+
+    /* Disabled state */
+    .control input:disabled ~ .control__indicator {
+        pointer-events: none;
+        opacity: .6;
+        background: #e6e6e6;
+    }
+
+    /* Check mark */
+    .control__indicator:after {
+        position: absolute;
+        display: none;
+        content: '';
+    }
+
+    /* Show check mark */
+    .control input:checked ~ .control__indicator:after {
+        display: block;
+    }
+
+    /* Checkbox tick */
+    .control--checkbox .control__indicator:after {
+        top: 4px;
+        left: 8px;
+        width: 3px;
+        height: 8px;
+        transform: rotate(45deg);
+        border: solid #fff;
+        border-width: 0 2px 2px 0;
+    }
+
+    /* Disabled tick colour */
+    .control--checkbox input:disabled ~ .control__indicator:after {
+        border-color: #7b7b7b;
+    }
+
+    /* Radio button inner circle */
+    .control--radio .control__indicator:after {
+        top: 5px;
+        left: 5px;
+        width: 5px;
+        height: 5px;
+        border-radius: 50%;
+        background: #fff;
+    }
+
+    /* Disabled circle colour */
+    .control--radio input:disabled ~ .control__indicator:after {
+        background: #7b7b7b;
+    }
+}
