--- a/app/views/surveys/_survey_two.html.erb
+++ b/app/views/surveys/_survey_two.html.erb
@@ -1,41 +1,96 @@
+<div class="page-container">
+
+<!-- <h1 class="survey-title">Survey</h1> -->
+<section class="survey-wrapper">
 	<p id="notice"><%= notice %></p>
 
-	<p class="intro-copy">Answer these questions and receive <%= @survey.credits %> credits!</p>
+	<p class="intro-copy">Complete this survey and receive <%= @survey.credits %> credits!</p>
 
 	<div class="refer-friend">
-	 	<p class="redeemCredits__title">Complete Survey:</p>
 
 	 	<div class="survey__question">
 			<p class="survey__question-copy">1. How often do you drink coffee? </p>
-			<%= radio_button 'coffee', 'frequency', '0 times per week', :required => true %> 0 times per week <br />
-			<%= radio_button 'coffee', 'frequency', '1-3 times per week' %> 1-3 times per week <br />
-			<%= radio_button 'coffee', 'frequency', '4+ times per week' %> 4+times per week
+
+			<label class="control control--radio">0 times per week
+			<%= radio_button 'coffee', 'frequency', '0 times per week', :required => true %>
+			<div class="control__indicator"></div>
+			</label><!-- /.control .control--radio -->
+
+			<label class="control control--radio">1-3 times per week
+			<%= radio_button 'coffee', 'frequency', '1-3 times per week' %>
+			<div class="control__indicator"></div>
+			</label><!-- /.control .control--radio -->
+
+			<label class="control control--radio"> 4+
+			<%= radio_button 'coffee', 'frequency', '4+ times per week' %>
+			<div class="control__indicator"></div>
+			</label><!-- /.control .control--radio -->
 		</div>
 
 		<div class="survey__question">
 			<p class="survey__question-copy">2. If you are at a coffee shop, which are you more likely to order?</p>
-			<%= radio_button 'workout', 'location', 'home/personal gym' %> In a home/personal gym <br />
-			<%= radio_button 'workout', 'location', 'local gym' %> In a local gym <br />
-			<%= radio_button 'workout', 'location', 'outside' %> Outside <br />
+
+			<label class="control control--radio">In a home/personal gym
+			<%= radio_button 'workout', 'location', 'home/personal gym' %>
+			<div class="control__indicator"></div>
+			</label><!-- /.control .control--radio -->
+
+			<label class="control control--radio">In a local gym
+			<%= radio_button 'workout', 'location', 'local gym' %>
+			<div class="control__indicator"></div>
+			</label><!-- /.control .control--radio -->
+
+			<label class="control control--radio">Outside
+			<%= radio_button 'workout', 'location', 'outside' %>
+			<div class="control__indicator"></div>
+			</label><!-- /.control .control--radio -->
 		</div>
 
 		<div class="survey__question">
 			<p class="survey__question-copy">3. Have you ever tried CrossFit or Iron Tribe?</p>
-			<%= radio_button 'cross-iron', 'yesno', 'yes' %> Yes <br />
-			<%= radio_button 'cross-iron', 'yesno', 'no' %> No <br />
+
+			<label class="control control--radio">Yes
+			<%= radio_button 'cross-iron', 'yesno', 'yes' %>
+			<div class="control__indicator"></div>
+			</label><!-- /.control .control--radio -->
+
+			<label class="control control--radio">No
+			<%= radio_button 'cross-iron', 'yesno', 'no' %>
+			<div class="control__indicator"></div>
+			</label><!-- /.control .control--radio -->
 		</div>
 
 		<div class="survey__question">
 			<p class="survey__question-copy">4. What is your experience with health / workout supplements?</p>
-			<%= radio_button 'supplements', 'taken', 'never' %> Never taken any <br />
-			<%= radio_button 'supplements', 'taken', 'past' %> I have taken them in the past but do not now <br />
-			<%= radio_button 'supplements', 'taken', 'current' %>	 I currently take a vitamin/supplemen <br />
+
+			<label class="control control--radio">Never taken any
+			<%= radio_button 'supplements', 'taken', 'never' %>
+			<div class="control__indicator"></div>
+			</label><!-- /.control .control--radio -->
+
+			<label class="control control--radio">I have taken them in the past but do not now
+			<%= radio_button 'supplements', 'taken', 'past' %>
+			<div class="control__indicator"></div>
+			</label><!-- /.control .control--radio -->
+
+			<label class="control control--radio">I currently take a vitamin/supplement
+			<%= radio_button 'supplements', 'taken', 'current' %>
+			<div class="control__indicator"></div>
+			</label><!-- /.control .control--radio -->
 		</div>
 
 		<div class="survey__question">
 			<p class="survey__question-copy">5. Have you ever heard of ClassPass?</p>
-			<%= radio_button 'classpass', 'yesno', 'yes' %> Yes <br />
-			<%= radio_button 'classpass', 'yesno', 'no' %>	 No <br />
+
+			<label class="control control--radio">Yes
+			<%= radio_button 'classpass', 'yesno', 'yes' %>
+			<div class="control__indicator"></div>
+			</label><!-- /.control .control--radio -->
+
+			<label class="control control--radio">No
+			<%= radio_button 'classpass', 'yesno', 'no' %>
+			<div class="control__indicator"></div>
+			</label><!-- /.control .control--radio -->
 		</div>
 
 		<%= form_for(@user_survey) do |f| %>
@@ -45,3 +100,5 @@
 		<% end %>
 	</div> <!--/.refer-friend -->
 
+</section><!-- /.section-wrapper -->
+</div>
