added radio buttons to fitness graph

--- a/app/assets/stylesheets/surveys.css.scss
+++ b/app/assets/stylesheets/surveys.css.scss
@@ -134,10 +134,10 @@
 
 .survey-landing {
     .card-tout {
-        &:last-child {
-            position: relative;
-            top: 20px;
-        }
+        // &:last-child {
+        //     position: relative;
+        //     top: 20px;
+        // }
     }
     .card__credits {
         margin-bottom: 10px;
