--- a/app/views/surveys/_survey_one.html.erb
+++ b/app/views/surveys/_survey_one.html.erb
@@ -11,35 +11,87 @@
 
 	 	<div class="survey__question">
 			<p class="survey__question-copy">1. How frequently do you work out? </p>
-			<%= radio_button 'workout', 'frequency', '0 times per week', :required => true %> 0 times per week <br />
-			<%= radio_button 'workout', 'frequency', '1-3 times per week' %> 1-3 times per week <br />
-			<%= radio_button 'workout', 'frequency', '4+ times per week' %> 4+times per week
+			<label class="control control--radio">
+				<%= radio_button 'workout', 'frequency', '0 times per week', :required => true %> 0 times per week <br />
+				<div class="control__indicator"></div>
+			</label><!-- /.control -->
+
+			<label class="control control--radio">
+				<%= radio_button 'workout', 'frequency', '1-3 times per week' %> 1-3 times per week <br />
+				<div class="control__indicator"></div>
+			</label><!-- /.control -->
+
+			<label class="control control--radio">
+				<%= radio_button 'workout', 'frequency', '4+ times per week' %> 4+times per week
+				<div class="control__indicator"></div>
+			</label><!-- /.control -->
+
 		</div>
 
 		<div class="survey__question">
 			<p class="survey__question-copy">2. Where do you prefer to work out?</p>
-			<%= radio_button 'workout', 'location', 'home/personal gym' %> In a home/personal gym <br />
-			<%= radio_button 'workout', 'location', 'local gym' %> In a local gym <br />
-			<%= radio_button 'workout', 'location', 'outside' %> Outside <br />
+			<label class="control control--radio">
+				<%= radio_button 'workout', 'location', 'home/personal gym' %> In a home/personal gym <br />
+				<div class="control__indicator"></div>
+			</label><!-- /.control -->
+
+			<label class="control control--radio">
+				<%= radio_button 'workout', 'location', 'local gym' %> In a local gym <br />
+				<div class="control__indicator"></div>
+			</label><!-- /.control -->
+
+			<label class="control control--radio">
+				<%= radio_button 'workout', 'location', 'outside' %> Outside <br />
+				<div class="control__indicator"></div>
+			</label><!-- /.control -->
+
 		</div>
 
 		<div class="survey__question">
 			<p class="survey__question-copy">3. Have you ever tried CrossFit or Iron Tribe?</p>
-			<%= radio_button 'cross-iron', 'yesno', 'yes' %> Yes <br />
-			<%= radio_button 'cross-iron', 'yesno', 'no' %> No <br />
+			<label class="control control--radio">
+				<%= radio_button 'cross-iron', 'yesno', 'yes' %> Yes <br />
+				<div class="control__indicator"></div>
+			</label><!-- /.control -->
+
+			<label class="control control--radio">
+				<%= radio_button 'cross-iron', 'yesno', 'no' %> No <br />
+				<div class="control__indicator"></div>
+			</label><!-- /.control -->
+
 		</div>
 
 		<div class="survey__question">
 			<p class="survey__question-copy">4. What is your experience with health / workout supplements?</p>
-			<%= radio_button 'supplements', 'taken', 'never' %> Never taken any <br />
-			<%= radio_button 'supplements', 'taken', 'past' %> I have taken them in the past but do not now <br />
-			<%= radio_button 'supplements', 'taken', 'current' %>	 I currently take a vitamin/supplemen <br />
+			<label class="control control--radio">
+				<%= radio_button 'supplements', 'taken', 'never' %> Never taken any <br />
+				<div class="control__indicator"></div>
+			</label><!-- /.control -->
+
+			<label class="control control--radio">
+				<%= radio_button 'supplements', 'taken', 'past' %> I have taken them in the past but do not now <br />
+				<div class="control__indicator"></div>
+			</label><!-- /.control -->
+
+			<label class="control control--radio">
+				<%= radio_button 'supplements', 'taken', 'current' %>	 I currently take a vitamin/supplemen <br />
+				<div class="control__indicator"></div>
+			</label><!-- /.control -->
+
 		</div>
 
 		<div class="survey__question">
 			<p class="survey__question-copy">5. Have you ever heard of ClassPass?</p>
-			<%= radio_button 'classpass', 'yesno', 'yes' %> Yes <br />
-			<%= radio_button 'classpass', 'yesno', 'no' %>	 No <br />
+			<label class="control control--radio">
+				<%= radio_button 'classpass', 'yesno', 'yes' %> Yes <br />
+				<div class="control__indicator"></div>
+			</label><!-- /.control -->
+
+			<label class="control control--radio">
+				<%= radio_button 'classpass', 'yesno', 'no' %>	 No <br />
+				<div class="control__indicator"></div>
+			</label><!-- /.control -->
+
 		</div>
 
 		<%= form_for(@user_survey) do |f| %>
