added padding to bottom of survey pages

--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -51,7 +51,8 @@ body {
 
     &.leaderboard-index-page--mobile,
     &.leaderboard-page--mobile,
-    &.mobile-games-page {
+    &.mobile-games-page,
+    &.survey-page {
         padding-bottom: 50px;
     }
 
