--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -1,6 +1,8 @@
- <% case @survey.slug %>
-  <% when "fitness-survey" %>
-    <%= render 'survey_one' %>
-  <% when "coffee-survey" %>
-    <%= render 'survey_two' %>
+<% case @survey.slug %>
+    <% when "fitness-survey" %>
+        <%= render 'survey_one' %>
+    <% when "coffee-survey" %>
+        <%= render 'survey_two' %>
+    <% when "golf-survey" %>
+        <%= render 'survey_three' %>
 <% end %>
