--- a/app/assets/stylesheets/interior_pages.css.scss
+++ b/app/assets/stylesheets/interior_pages.css.scss
@@ -173,8 +173,9 @@
     font-size: 20px;
     letter-spacing: 0.25px;
     font-weight: 200;
-    margin: 0 0 10px;
+    margin: 0 0 5px;
     text-align: left;
+    line-height: 1em;
     .fa {
         color: $white;
         min-width: 25px;
