encapsulated fb and twitter user agent conditions

--- a/app/views/static_pages/home_mobile.html.erb
+++ b/app/views/static_pages/home_mobile.html.erb
@@ -31,7 +31,7 @@
 <% end %>
 
 <script>
-    if (app.isWebAppMode()) {
-        $('.js-bottom-content__container').addClass('wam');
-    }
+    $(document).ready(function(){
+        $('.welcome-box-m').text(navigator.userAgent);
+    });
 </script>
