added confirmation email param detection

--- a/app/views/users/_form_mobile.html.erb
+++ b/app/views/users/_form_mobile.html.erb
@@ -42,7 +42,7 @@
                     <span class="js-error-case js-error-case--invalid">invalid email</span>
                     <span class="js-error-case js-error-case--taken">email taken</span>
                 </span>
-                <%= f.text_field :email, placeholder: 'Email', class: "form-input js-validate js-validate--email" %>
+                <%= f.email_field :email, placeholder: 'Email', class: "form-input js-validate js-validate--email" %>
             </div><!-- /.form-input--wrap -->
 
             <div class="form-input--wrap">
