--- a/app/views/user_notifier/send_confirmation_email.html.erb
+++ b/app/views/user_notifier/send_confirmation_email.html.erb
@@ -1,3 +1,3 @@
 Thanks for signing up for Luckee. Click the link below to verify your email:<br><br>
 
-<a href="http://www.getluckee.com?confirmed=true">Confirm your email</a>
+<a href="<%= request.env["HTTP_HOST"] %>?confirmed=true">Confirm your email</a>
